objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Discount__c</fullName>
        <formula>Account.Discount_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yahoo_Name__c</fullName>
        <label>Yahoo Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ihi__c</fullName>
        <formula>TRIM(LEFT(LastName, 5)) &amp;
&quot;-&quot; &amp; TRIM(RIGHT(SSN__c, 4))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ihi</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ojiu__c</fullName>
        <formula>IF(OR(ISPICKVAL(Account.Rating, &quot;Hot&quot;), CONTAINS(Title, &quot;Executive&quot;)),
&quot;P1&quot;,
IF(OR(ISPICKVAL(Account.Rating, &quot;Warm&quot;), CONTAINS(Title, &quot;VP&quot;)), &quot;P2&quot;,
IF(ISPICKVAL(Account.Rating, &quot;Cold&quot;), &quot;P3&quot;,
&quot;25&quot;)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ojiu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tyu__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>tyu</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vdzv__c</fullName>
        <formula>IF(Account.Website=&quot;&quot;, &quot;&quot;,
IF(
OR(LEFT(Account.Website, 7) = &quot;http://&quot;,LEFT(Account.Website, 8) =
&quot;https://&quot;),
HYPERLINK( Account.Website , &quot;Click Here&quot; ),
HYPERLINK( &quot;http://&quot; &amp; Account.Website , &quot;Click Here&quot; )
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>vdzv</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yahu__c</fullName>
        <formula>HYPERLINK(&quot;ymsgr:sendIM?&quot; &amp; Yahoo_Name__c,
IMAGE(&quot;http://opi.yahoo.com/online?u=&quot; &amp;
Yahoo_Name__c &amp;
&quot;&amp;m;=g&amp;t;=0&quot;, &quot;Yahoo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>yahu</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>